Fix blockquote on small devices

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -21,4 +21,8 @@
         margin-top: 25px;
     }
 
+    blockquote {
+        width: 100%;
+    }
+
 }
